<resources>
    <string name="app_name">AppTareaM2</string>
    <string name="nombre">Nombre Completo</string>
    <string name="date">Dia/Mes/Año</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción del contacto</string>
    <string name="botonsiguiente">Siguiente</string>
    <string name="botoneditar">Editar Datos</string>
    <dimen name="textsize">24sp</dimen>
    <dimen name="bottonmargin">20dp</dimen>
    <dimen name="margen">30dp</dimen>
    <dimen name="botonmargen">100dp</dimen>
</resources>