<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/nombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textSize="@dimen/textsize"
            android:layout_marginTop="@dimen/margen"
           />

        <EditText
            android:id="@+id/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textSize="@dimen/textsize"
            android:layout_marginTop="@dimen/margen"
            />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textSize="@dimen/textsize"
            android:layout_marginTop="@dimen/margen"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/textsize"
            android:layout_marginTop="@dimen/margen"
            />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:textSize="@dimen/textsize"
            android:layout_marginTop="@dimen/margen"
           />


    </LinearLayout>

    <Button
        android:id="@+id/botonsiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/celeste"
        android:text="@string/botonsiguiente"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/botonmargen" />


</LinearLayout>